--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 Build/web-08.data filter=lfs diff=lfs merge=lfs -text
+Build/web-01.data filter=lfs diff=lfs merge=lfs -text
+Build/web-01.wasm filter=lfs diff=lfs merge=lfs -text
