--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 Build/web-08.data filter=lfs diff=lfs merge=lfs -text
 Build/web-01.data filter=lfs diff=lfs merge=lfs -text
 Build/web-01.wasm filter=lfs diff=lfs merge=lfs -text
+Build/web-01.data.unityweb filter=lfs diff=lfs merge=lfs -text
