--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ Build/web-01.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/q-pc.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc-v1.3.data.unityweb filter=lfs diff=lfs merge=lfs -text
+Build/quest-pc-cheat.data.unityweb filter=lfs diff=lfs merge=lfs -text
