--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ Build/quest-pc.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/q-pc.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc-v1.3.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc-cheat.data.unityweb filter=lfs diff=lfs merge=lfs -text
+Build/quest.data.unityweb filter=lfs diff=lfs merge=lfs -text
