--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ Build/q-pc.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc-v1.3.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest-pc-cheat.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest.data.unityweb filter=lfs diff=lfs merge=lfs -text
+deleted: filter=lfs diff=lfs merge=lfs -text
+Build/9b1843e2d403cef94c1266cbc14edf11.data.unityweb filter=lfs diff=lfs merge=lfs -text
