--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ Build/quest-pc-cheat.data.unityweb filter=lfs diff=lfs merge=lfs -text
 Build/quest.data.unityweb filter=lfs diff=lfs merge=lfs -text
 deleted: filter=lfs diff=lfs merge=lfs -text
 Build/9b1843e2d403cef94c1266cbc14edf11.data.unityweb filter=lfs diff=lfs merge=lfs -text
+Build/3a205970ffe252c628647ba4771ada64.data.unityweb filter=lfs diff=lfs merge=lfs -text
